--- a/linux/Dockerfile
+++ b/linux/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:24.04
 
-RUN apt-get update && apt-get install -y \ 
+RUN apt-get update && apt-get install -y \
 	locales \
 	sudo \
 	bash \
@@ -11,6 +11,7 @@ RUN apt-get update && apt-get install -y \
 	htop \
 	make \
 	tar \
+    vim \
 	&& localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8
 ENV LANG=en_US.utf8
 
