--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,20 +19,23 @@ services:
         condition: service_healthy
     ports:
       - "1323:1323"
+    env_file:
+      - .env
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - .env:/usr/src/app/.env:ro
 
   redis:
     image: redis:8.4
     ports:
       - "6379:6379"
-    command: [ "redis-server" ]
+    command: ["redis-server"]
     volumes:
       - redis_data:/data
     networks:
       - webtermi_network
     healthcheck:
-      test: [ "CMD", "redis-cli", "ping" ]
+      test: ["CMD", "redis-cli", "ping"]
       interval: 5s
       timeout: 5s
       retries: 5
